--- a/index.html
+++ b/index.html
@@ -836,145 +836,179 @@
         }
         window.excluir = (idx) => { if (confirm('Excluir este item?')) { state.itens.splice(idx, 1); renderBody(); renderCards(); save(); } }
 
-        // Impressão por loja
-        // ============ IMPRESSÃO POR LOJA — LAYOUT TIPO FORMULÁRIO ============
+               // ======= IMPRESSÃO — Cabeçalho com LOGO + dados fixos do seu modelo =======
         window.printLoja = (i) => {
-            const lojaNome = (state.lojas?.[i]) || `Loja ${i + 1}`;
+            // >>>>>> EDITE AQUI se precisar mudar algo do cabeçalho <<<<<<
+            const EMPRESA = {
+                logo: './logo.png', // coloque um arquivo logo.png na raiz do repo
+                nome: 'KLAYNE REPRESENTAÇÕES',
+                endereco: 'Rua Raimunda Maria Aragão, 207 - Bela Vista - Snt Cruz do Capibaribe - PE',
+                telefone: '(81) 99275-7505'
+            };
+            // <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
+
+            const lojaNome = state.lojas?.[i] || `Loja ${i + 1}`;
             const pedidoId = state.pedidoId || '—';
-            const dt = new Date(state.criadoEm || Date.now());
+            const dataImp = new Date(state.criadoEm || Date.now());
 
-            // monta itens da loja aplicando % de desconto do fornecedor de cada item
-            const itens = state.itens.map(x => {
-                const fornId = (typeof x.forn === 'number') ? x.forn : 0;
-                const fn = state.fornecedores?.[fornId];
-                const fornNm = fn?.nome || `Fornecedor ${fornId}`;
-                const descPc = Math.max(0, Math.min(100, fn?.desconto || 0));
-                const q = num(x.qtd?.[i] || 0);
-                const unit = num(x.valor);
+            // filtra itens desta loja (q > 0) e calcula fornecedor de cada um
+            const usados = state.itens.map(it => {
+                const q = num(it.qtd?.[i] || 0);
+                if (q <= 0) return null;
+                const fornId = (typeof it.forn === 'number') ? it.forn : 0;
+                const unit = num(it.valor);
+                const subB = q * unit;
                 return {
-                    desc: x.desc, fornNm, descPc, q, unit,
-                    subBruto: q * unit, subDesc: q * unit * (1 - descPc / 100)
+                    desc: it.desc, q, unit, subB,
+                    fornId,
+                    fornNm: (state.fornecedores?.[fornId]?.nome) || `Fornecedor ${fornId}`,
+                    descPc: Math.max(0, Math.min(100, (state.fornecedores?.[fornId]?.desconto) || 0))
                 };
-            }).filter(x => x.q > 0);
+            }).filter(Boolean);
 
-            const fornecedoresLista = [...new Map(
-                itens.map(x => [x.fornNm, x.descPc])
-            ).entries()]
-                .map(([n, p]) => `${n} (${p.toLocaleString('pt-BR')}%)`)
-                .join(' • ') || '—';
+            if (!usados.length) { alert('Não há itens com quantidade > 0 para esta loja.'); return; }
 
-            const totalBruto = itens.reduce((s, x) => s + x.subBruto, 0);
-            const totalDesc = itens.reduce((s, x) => s + x.subDesc, 0);
-            const economia = totalBruto - totalDesc;
+            // modelo imprime UM fornecedor por formulário — pergunta qual se houver mais
+            const fornecedoresNaLoja = [...new Set(usados.map(x => x.fornId))];
+            let fornId = fornecedoresNaLoja[0];
+            if (fornecedoresNaLoja.length > 1) {
+                const lista = fornecedoresNaLoja.map(fid => `${fid} — ${state.fornecedores?.[fid]?.nome || 'Fornecedor ' + fid}`).join('\n');
+                const resp = prompt(`Esta loja tem vários fornecedores.\nQual deseja imprimir?\n\n${lista}\n\nDigite o NÚMERO do fornecedor:`, String(fornecedoresNaLoja[0]));
+                if (resp === null) return;
+                const f = parseInt(resp, 10);
+                if (!fornecedoresNaLoja.includes(f)) { alert('Fornecedor inválido.'); return; }
+                fornId = f;
+            }
 
+            const fornNm = (state.fornecedores?.[fornId]?.nome) || `Fornecedor ${fornId}`;
+            const descPc = Math.max(0, Math.min(100, (state.fornecedores?.[fornId]?.desconto) || 0));
+            const itens = usados.filter(x => x.fornId === fornId);
+
+            // Totais do formulário
+            const totalBruto = itens.reduce((s, x) => s + x.subB, 0);
+            const descontoR$ = totalBruto * (descPc / 100);
+            const totalFinal = totalBruto - descontoR$;
+
+            // Linhas
             const rows = itens.map(x => `
     <tr>
       <td>${escapeHtml(x.desc)}</td>
-      <td class="num">${fmt.format(x.unit)}</td>
       <td class="num">${x.q.toLocaleString('pt-BR')}</td>
-      <td class="num">${fmt.format(x.subDesc)}</td>
-      <td>${escapeHtml(x.fornNm)}</td>
-    </tr>`).join('');
+      <td class="num">${fmt.format(x.unit)}</td>
+      <td class="num">${fmt.format(x.q * x.unit * (1 - descPc / 100))}</td>
+    </tr>
+  `).join('');
+
+            const digitDefault = localStorage.getItem('digitadorNome') || '';
+            const digitador = prompt('Nome do digitador (opcional):', digitDefault);
+            if (digitador !== null) localStorage.setItem('digitadorNome', digitador || '');
 
             const html = `<!DOCTYPE html><html lang="pt-BR"><head><meta charset="utf-8">
-    <title>Formulário — ${escapeHtml(lojaNome)}</title>
-    <style>
-      @page { size: A4 portrait; margin: 10mm }
-      :root{ --ink:#111; --mut:#666; --line:#ccd3dd; --box:#e9edf3; }
-      body{ font:12px/1.35 Arial,system-ui,sans-serif; color:var(--ink); margin:0 }
-      .wrap{ padding:0 }
-      /* Cabeçalho em GRID: 3 blocos alinhados (fácil de mover/reordenar) */
-      .cab{ display:grid; grid-template-columns: 1.2fr 1fr 1fr; gap:8px; margin-bottom:10px }
-      .campo{ border:1px solid var(--line); padding:6px 8px; border-radius:6px; background:#fff }
-      .rot{ font-size:10px; color:var(--mut); letter-spacing:.04em; text-transform:uppercase }
-      .val{ font-size:13px; font-weight:600 }
-      .titulo{ grid-column:1 / -1; display:flex; justify-content:space-between; align-items:flex-end; }
-      .titulo h1{ margin:0; font-size:20px }
-      .titulo .id{ font-size:12px; color:var(--mut) }
-
-      table{ width:100%; border-collapse:collapse; margin-top:6px }
-      th,td{ padding:6px 5px; border-bottom:1px solid var(--line) }
-      th{ background:var(--box); text-align:left; font-size:11px }
-      td.num{ text-align:right }
-
-      .totais{ display:flex; gap:12px; justify-content:flex-end; margin-top:10px; }
-      .totais .campo{ min-width:210px }
-      .assin{ display:grid; grid-template-columns:1fr 1fr; gap:14px; margin-top:18px }
-      .linha{ border-top:1px solid var(--ink); height:38px; }
-      .label-assin{ font-size:10px; color:var(--mut); margin-top:2px; text-align:center }
-
-      @media print{ .noprint{ display:none } }
-    </style>
+  <title>Pedido — ${escapeHtml(lojaNome)}</title>
+  <style>
+    @page{ size:A4; margin:12mm }
+    :root{ --ink:#111; --mut:#666; --line:#cfd7e1; --box:#eef2f7 }
+    body{ font:12px/1.45 Arial,system-ui,sans-serif; color:var(--ink); margin:0 }
+    .top{ display:grid; grid-template-columns: 1.4fr 1fr; align-items:center; gap:12px; margin-bottom:8px }
+    .marca{ display:grid; grid-template-columns:auto 1fr; gap:10px; align-items:center }
+    .logo img{ height:50px; width:auto }
+    .marca .nome{ font-size:18px; font-weight:800; letter-spacing:.3px; margin-bottom:2px }
+    .marca .sub{ color:var(--mut) }
+    .pedido{ text-align:right }
+    .pedido .tit{ font-size:18px; font-weight:800; letter-spacing:.4px }
+    .pedido .meta{ color:var(--mut) }
+    .blocos{ display:grid; grid-template-columns: 1fr 1fr; gap:12px; margin:10px 0 12px }
+    .box{ border:1px solid var(--line); border-radius:6px; background:#fff; padding:8px }
+    .box h3{ margin:0 0 6px; font-size:13px }
+    .row{ display:grid; grid-template-columns: 90px 1fr; gap:8px; margin:3px 0 }
+    table{ width:100%; border-collapse:collapse; margin:6px 0 8px }
+    th,td{ padding:6px 6px; border:1px solid var(--line) }
+    th{ background:var(--box); text-align:left; font-size:11.5px }
+    td.num, th.num{ text-align:right }
+    .totais{ margin-top:10px }
+    .totais .row{ grid-template-columns: 160px 1fr; }
+    .assin{ display:grid; grid-template-columns:1fr 1fr 1fr; gap:20px; margin-top:22px }
+    .ass{ text-align:center }
+    .linha{ border-top:1px solid var(--ink); height:38px; }
+    .obs{ min-height:42px; border:1px solid var(--line); border-radius:6px; padding:8px; }
+    .nota{ margin-top:8px; color:#333; font-size:11.3px }
+    @media print{ .noprint{display:none} }
+  </style>
   </head><body>
-    <div class="wrap">
-      <!-- TÍTULO -->
-      <div class="titulo">
-        <h1>Formulário de Pedido por Loja</h1>
-        <div class="id">Pedido: <b>${escapeHtml(pedidoId)}</b> • ${dt.toLocaleString('pt-BR')}</div>
+
+  <!-- Cabeçalho -->
+  <div class="top">
+    <div class="marca">
+      <div class="logo">
+        <img src="${EMPRESA.logo}" alt="Logo"
+             onerror="this.style.display='none'">
       </div>
-
-      <!-- CABEÇALHO — pode trocar a ordem dos blocos à vontade -->
-      <div class="cab">
-        <div class="campo">
-          <div class="rot">Loja</div>
-          <div class="val">${escapeHtml(lojaNome)}</div>
-        </div>
-        <div class="campo">
-          <div class="rot">Fornecedor(es) e descontos</div>
-          <div class="val">${escapeHtml(fornecedoresLista)}</div>
-        </div>
-        <div class="campo">
-          <div class="rot">Observação</div>
-          <div class="val">&nbsp;</div>
-        </div>
+      <div>
+        <div class="nome">${escapeHtml(EMPRESA.nome)}</div>
+        <div class="sub">${escapeHtml(EMPRESA.endereco)}</div>
+        <div class="sub">${escapeHtml(EMPRESA.telefone)}</div>
       </div>
-
-      <!-- ITENS -->
-      <table>
-        <thead>
-          <tr>
-            <th>Descrição</th>
-            <th class="num">Valor Unit.</th>
-            <th class="num">Qtd</th>
-            <th class="num">Subtotal (c/ desc.)</th>
-            <th>Fornecedor</th>
-          </tr>
-        </thead>
-        <tbody>
-          ${rows || '<tr><td colspan="5" class="num">— sem itens —</td></tr>'}
-        </tbody>
-      </table>
-
-      <!-- TOTAIS -->
-      <div class="totais">
-        <div class="campo">
-          <div class="rot">Total bruto</div>
-          <div class="val">${fmt.format(totalBruto)}</div>
-        </div>
-        <div class="campo">
-          <div class="rot">Total com desconto</div>
-          <div class="val">${fmt.format(totalDesc)}</div>
-        </div>
-        <div class="campo">
-          <div class="rot">Economia</div>
-          <div class="val">${fmt.format(economia)}</div>
-        </div>
-      </div>
-
-      <!-- ASSINATURAS -->
-      <div class="assin">
-        <div>
-          <div class="linha"></div>
-          <div class="label-assin">Assinatura / Carimbo</div>
-        </div>
-        <div>
-          <div class="linha"></div>
-          <div class="label-assin">Recebido por</div>
-        </div>
-      </div>
-
-      <button class="noprint" onclick="window.print()" style="margin-top:14px">Imprimir</button>
     </div>
+    <div class="pedido">
+      <div class="tit">PEDIDO</div>
+      <div class="meta">Nº: <b>${escapeHtml(pedidoId)}</b></div>
+      <div class="meta">Data: ${dataImp.toLocaleDateString('pt-BR')}</div>
+    </div>
+  </div>
+
+  <!-- Blocos: Fornecedor (em cima) e Loja (abaixo), igual ao modelo -->
+  <div class="blocos">
+    <div class="box">
+      <h3>Dados do Cliente</h3>
+      <div class="row"><div>Nome:</div>   <div>${escapeHtml(lojaNome)}</div></div>
+      <div class="row"><div>Celular:</div><div>(  ) _____-_____</div></div>
+      <div class="row"><div>Loja:</div>   <div>${escapeHtml(lojaNome)}</div></div>
+    </div>
+
+    <div class="box">
+      <h3>Dados do Fornecedor</h3>
+      <div class="row"><div>Nome:</div>   <div>${escapeHtml(fornNm)}</div></div>
+      <div class="row"><div>Celular:</div><div>(  ) _____-_____</div></div>
+      <div class="row"><div>Loja:</div>   <div>__________________</div></div>
+    </div>
+  </div>
+
+  <!-- Itens -->
+  <table>
+    <thead>
+      <tr>
+        <th>Produto</th>
+        <th class="num">Qtd</th>
+        <th class="num">Vlr Unit.</th>
+        <th class="num">Subtotal</th>
+      </tr>
+    </thead>
+    <tbody>
+      ${rows || '<tr><td colspan="4" class="num">— sem itens —</td></tr>'}
+    </tbody>
+  </table>
+
+  <!-- Totais -->
+  <div class="totais">
+    <div class="row"><div><b>Valor Bruto:</b></div><div><b>${fmt.format(totalBruto)}</b></div></div>
+    <div class="row"><div>Desconto Aplicado:</div><div>${descPc.toLocaleString('pt-BR')}% (${fmt.format(descontoR$)})</div></div>
+    <div class="row"><div><b>Valor Final:</b></div><div><b>${fmt.format(totalFinal)}</b></div></div>
+  </div>
+
+  <!-- Rodapé -->
+  <div style="margin:10px 0 6px"><b>Digitador:</b> ${escapeHtml(digitador || '')}</div>
+  <div class="obs"><b>Observações:</b><br>&nbsp;</div>
+
+  <div class="assin">
+    <div class="ass"><div class="linha"></div>Representante</div>
+    <div class="ass"><div class="linha"></div>Recebedor</div>
+    <div class="ass"><div class="linha"></div>Fornecedor</div>
+  </div>
+
+  <div class="nota">Obs: Toda mercadoria só será recebida mediante etiqueta com nome do fornecedor e preço da mercadoria.<br><b>NÃO RASURAR ESTE DOCUMENTO.</b></div>
+
+  <button class="noprint" onclick="window.print()" style="margin-top:10px">Imprimir</button>
+
   </body></html>`;
 
             const win = window.open('', '_blank');
@@ -1314,3 +1348,4 @@
 </body>
 
 </html>
+
